# auc-calculator

./: .gitignore  LICENSE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
lib-auccalc/: Cargo.toml
lib-auccalc-py/: Cargo.toml  MANIFEST.in  README.md  requirements.txt  setup.py
lib-auccalc-py/auccalculator/: __init__.py
lib-auccalc-py/auccalculator/metrics/: __init__.py
lib-auccalc-py/src/: lib.rs  main.rs
lib-auccalc-py/tests/: test_confusion.py  test_metrics.py
lib-auccalc/src/: class_sort.rs  confusion.rs  lib.rs  main.rs  pnpoint.rs
python/auccalc/: __init__.py  __main__.py  pyauc.py
