[package]
name = "lib-auccalc-py"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
python-source = "../python"

[lib]
name = "auccalc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[dependencies.lib-auccalc]
path = "../lib-auccalc"
version = "0.1.0"

[dev-dependencies]
float-cmp = "0.9.0"
