[package]
name = "lib-auccalc-py"
version = "0.1.0"
authors = ["hayesall <alexander@batflyer.net>"]
edition = "2021"

[package.metadata.maturin]
python-source = "./"

[lib]
name = "_auccalculator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.16.5"

[dependencies.lib-auccalc]
path = "../lib-auccalc"
version = "*"

[dev-dependencies]
float-cmp = "0.9.0"

[features]
default = ["pyo3/extension-module"]
